---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-10-23
  Bugfixes:
    - Fix spawn controls tab in custom GUI not being re-enabled when GUI is recreated (on mod update for example).
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-10-23
  Bugfixes:
    - Fix a crash when clicking on player location in player list.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-22
  Major Features:
    - EXPERIMENTAL Support for Factorio 2.0 and Space Age DLC! Currently, only spawning on Nauvis is supported. More features to support space age will be added in the near future.
  Minor Features:
    - Added a button to teleport back to your respawn point. This is useful if you get placed at 0,0 coming back from space.
  Bugfixes:
    - Fixed an issues with surface blacklist being ignored.
    - Fixed an issue where I broke buddy spawn chunk gen.
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-10-19
  Bugfixes:
    - Reverting the enemy scaling that introduced new enemy forces due to being a suspected source of desyncs.
    - Fixed an issue where unexpected chunks were being removed when abandoned bases were being cleaned up, even though regrowth was disabled.
    - Fixed a bug where if you use the custom scenario, it would ignore mod settings even when not overriding them.
    - Removing accidentally included scenario from the mod package. (Gitignore doesn't stop it from being included in the mod package when using FMTK.)
  Minor Features: