@@ -113,6 +113,7 @@ oarc-shared-spawn-allow-joiners=Allow others to join your base.
 oarc-shared-spawn-full=Your base is full! No more players can join.
 
 oarc-set-respawn-loc-header=Respawn Location
+oarc-no-respawn-this-surface=You cannot set a custom respawn location on this surface.
 oarc-set-respawn-loc-info-surface-label=Current Surface Respawn: __1__ (x=__2__, y=__3__)
 oarc-set-respawn-loc=Set Respawn Location
 oarc-set-respawn-loc-tooltip=This will set your respawn point to your current location. There is a cooldown before you can change it again. You can only set this on supported surfaces.
